--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -1,5 +1,5 @@
 export(Estep, Mstep, normalize_codex2_nr, normalize_codex2_ns, normalize_null,
-       segment.recursive)
+       segmentCBS)
 import(Rsamtools, GenomeInfoDb, BSgenome.Hsapiens.UCSC.hg19, S4Vectors, CODEX)
 importFrom("IRanges","IRanges", "RangesList", "Views", "countOverlaps")
 importFrom("grDevices", "dev.off", "pdf")
