--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -4,7 +4,7 @@ export(Estep, Mstep, normalize_codex2_nr, normalize_codex2_ns, normalize_null,
 import(Rsamtools, GenomicRanges, BSgenome.Hsapiens.UCSC.hg19, S4Vectors)
 importFrom("GenomicRanges", "GRanges")
 importFrom("GenomeInfoDb", "mapSeqlevels")
-importFrom("IRanges", "IRanges", "RangesList", "Views", "countOverlaps")
+importFrom("IRanges", "IRanges", "Views", "countOverlaps")
 importFrom("grDevices", "dev.off", "pdf")
 importFrom("Biostrings","unmasked", "alphabetFrequency")
 importFrom("graphics", "par", "plot")
